remove scrollbar and fix cut off text

--- a/app/globals.css
+++ b/app/globals.css
@@ -8,10 +8,15 @@
 html,
 body {
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   margin: 0;
   padding: 0;
   font-family: var(--font-pretendard);
+  scrollbar-width: none;
+}
+
+body::-webkit-scrollbar {
+  display: none;
 }
 
 @theme {
@@ -168,6 +173,6 @@ body {
 
 @layer components {
   .page-container {
-    @apply mx-auto flex h-screen w-screen p-8 lg:p-10 xl:p-12;
+    @apply mx-auto flex min-h-screen w-screen p-8 lg:p-10 xl:p-12;
   }
 }
